--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
   flutter:
     sdk: flutter
   calendar_timeline: ^1.0.5
+  flutter_native_splash: ^2.2.16
+  intl: ^0.17.0
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
+  firebase_core: ^2.4.0
+  cloud_firestore: ^4.2.0
+  firebase_analytics: ^10.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,11 +61,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
 
   # To add assets to your application, add an assets section, like this:
   assets:
