--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.4.0
   cloud_firestore: ^4.2.0
   firebase_analytics: ^10.0.7
+  flutter_slidable: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
