--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.2.0
   firebase_analytics: ^10.0.7
   flutter_slidable: ^2.0.0
+  easy_localization: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -72,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/translations/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
